Fixing slideshow styling

--- a/sites/all/themes/at_mono/css/styles.base.css
+++ b/sites/all/themes/at_mono/css/styles.base.css
@@ -914,6 +914,8 @@ a.active:focus {
 }
 #block-views-slideshow-block {
   margin: 0;
+  background: transparent;
+  border: 0;
 }
 #slideshow .slide-image,
 #slideshow .slide-info {
