Adding styling for resource links; Editing their block template to remove shadow

--- a/sites/all/themes/at_mono/css/styles.base.css
+++ b/sites/all/themes/at_mono/css/styles.base.css
@@ -1558,6 +1558,16 @@ i.footer-logo:before {
   float: right;
 }
 
+.front #tri-panel {
+  padding: 0;
+}
+.front #tri-panel .block-inner {
+  margin: 0;
+}
+.front #tri-panel .block {
+  margin: 0;
+}
+
 /* Search results */
 .search-results {
   margin: 0;
