--- a/sites/all/themes/at_mono/css/styles.base.css
+++ b/sites/all/themes/at_mono/css/styles.base.css
@@ -275,8 +275,12 @@ html.js fieldset.collapsed {
 }
 
 /* Search */
+.region-header {
+  text-align: center;
+  padding-bottom: 30px;
+}
 .region-header #block-search-form {
-  margin: 20px 0 0;
+  margin: 0;
 }
 .region-header .block-inner {
   border-radius: 0;
@@ -286,6 +290,10 @@ html.js fieldset.collapsed {
   padding: 0;
 }
 #search-block-form {
+  position: relative;
+}
+#search-block-form .container-inline {
+  display: inline-block;
   position: relative;
 }
 #search-block-form .form-item {
@@ -705,21 +713,12 @@ a.active:focus {
 #header {
   background: #000 url(images/stripe-pat.png);
 }
-#header .container {
-  display: table;
-}
-#logo,
-.region-header {
-  display: table-cell;
-  vertical-align: middle;
-}
 #logo {
-
 }
 #logo a {
   max-width: 380px;
   display: block;
-  margin: 15px 0;
+  padding: 30px 0 15px;
 }
 #head-elements {
   _height: 88px;
@@ -924,7 +923,7 @@ a.active:focus {
   line-height: 1.3;
 }
 #menu-bar .menu-mlid-230 a {
-  min-width: 30px;
+  min-width: 25px;
   text-align: center;
 }
 #menu-bar ul ul ul li {
@@ -958,6 +957,9 @@ a.active:focus {
   color: #fff;
   transition: all .3s ease;
 }
+.bx-controls-direction {
+  display: none;
+}
 .bx-wrapper .bx-controls-direction a:hover {
   text-decoration: none;
   opacity: 1;
@@ -989,11 +991,10 @@ a.active:focus {
 }
 #slideshow {
   background: url(images/tri-pat.gif);
+  position: relative;
 }
 #slideshow .bx-viewport {
-  height: 400px;
-  max-height: 400px;
-  overflow: hidden;
+
 }
 #slideshow .block-inner {
   margin: 0;
@@ -1014,30 +1015,30 @@ a.active:focus {
 }
 #slideshow .slide-image,
 #slideshow .slide-info {
-  float: left;
+
 }
 #slideshow .slide-image {
-  width: 60%;
+  max-height: 400px;
+  overflow: hidden;
 }
 #slideshow .slide-info {
-  width: 40%;
   box-sizing: border-box;
-  padding: 60px;
+  padding: 25px 30px;
 }
 .slide-image img {
   border-right: 4px solid #222;
 }
 .slide-info h2 {
   color: #fff;
-  font-size: 26px;
-  font-weight: 500;
+  font-size: 23px;
+  font-weight: 400;
   margin-bottom: 5px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 .slide-info p {
   color: #ccc;
   font-size: 15px;
-  margin: 0 0 30px;
+  margin: 0 0 20px;
 }
 .slide-info a.button {
   background: #b81d00;
@@ -1051,7 +1052,8 @@ a.active:focus {
   background: linear-gradient(to bottom,  #d9271c 0%,#bb2118 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9271c', endColorstr='#bb2118',GradientType=0 ); /* IE6-8 */
 
-  padding: 15px 30px;
+  display: inline-block;
+  padding: 13px 30px;
   color: #fff;
   font-size: 13px;
   letter-spacing: .02em;
@@ -1064,6 +1066,32 @@ a.active:focus {
 .slide-info a.button:hover {
   text-decoration: none;
   opacity: .85;
+}
+#block-views-slideshow-block-1 {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 10px 30px 25px;
+}
+#block-views-slideshow-block-1 .item-list ul {
+  margin: 0;
+}
+#block-views-slideshow-block-1 .item-list li {
+  float: left;
+  margin: 0;
+  width: 16.6667%;
+}
+#block-views-slideshow-block-1 .item-list li a {
+  display: block;
+  box-shadow: 0 0 0 2px #111;
+  line-height: 0;
+  opacity: .5;
+  transition: all .3s ease;
+}
+#block-views-slideshow-block-1 .item-list li a.active {
+  box-shadow: 0 0 0 2px #b81d00;
+  opacity: 1;
+  position: relative;
+  z-index:450;
 }
 
 /* Articles */
@@ -1333,13 +1361,6 @@ a.active:focus {
 .region-header .block-content-inner {
   padding-top: 0;
 }
-.region-header .block {
-  font-size: 0.94em;
-  float: right; /* LTR */
-  margin: 0 10px;
-  padding: 0;
-  clear: none;
-}
 .region-header .block .content {
   margin: 0;
   padding: 0;
@@ -1553,9 +1574,12 @@ i.footer-logo:before {
 }
 
 /* home styles */
+.front .container {
+  padding: 0 10px;
+  box-sizing: border-box;
+}
 #block-views-calendar-block-2 {
-  width: 40%;
-  float: left;
+  margin-bottom: 20px;
 }
 #block-views-calendar-block-2 .block-inner,
 #block-views-calendar-block-2 .block-title-wrapper {
@@ -1564,7 +1588,7 @@ i.footer-logo:before {
 #block-views-calendar-block-2 .block-title,
 #block-views-page-elements-block h2 {
   padding: 0;
-  font-size: 26px;
+  font-size: 23px;
   font-weight: 400;
   text-transform: none;
   margin-bottom: 15px;
@@ -1631,9 +1655,6 @@ i.footer-logo:before {
 }
 
 #block-views-page-elements-block {
-  float: left;
-  width: 50%;
-  margin-left: 10%;
   box-sizing: border-box;
 }
 #block-views-page-elements-block p {
@@ -1657,7 +1678,7 @@ body.bb-hs.front #secondary-content-wrapper .image-overlay {
   padding-top: 60px;
 }
 .front #secondary-content-wrapper div.container {
-  padding: 0;
+  padding-bottom: 0;
 }
 .front #tasks {
   float: right;
@@ -1674,9 +1695,6 @@ body.bb-hs.front #secondary-content-wrapper .image-overlay {
 }
 #secondary-content-wrapper .block-inner {
   box-shadow: 1px 1px 4px rgba(0,0,0,.4);
-}
-.front #tri-panel .block {
-  margin: 0;
 }
 .front #tri-panel .block-title-wrapper {
   padding: 0;
@@ -1716,6 +1734,11 @@ body.bb-hs.front #secondary-content-wrapper .image-overlay {
   opacity: .80;
   box-shadow: inset 0 4px 4px -4px rgba(0,0,0,.3);
 }
+.front #page #secondary-content-wrapper .block-content-inner img {
+  max-width: 90%;
+  max-height: 90%;
+  width: auto;
+}
 #tri-panel .resource-link .image,
 #tri-panel .resource-link span {
   display: table-cell;
@@ -1726,7 +1749,7 @@ body.bb-hs.front #secondary-content-wrapper .image-overlay {
   text-align: center;
 }
 #tri-panel .resource-link span {
-  padding: 0 25px 0 5px;
+  padding: 0 30px 0 5px;
   color: #fff;
   font-weight: 500;
 }
