Adding social link urls and fixing side menu link coloring

--- a/sites/all/themes/at_mono/css/styles.base.css
+++ b/sites/all/themes/at_mono/css/styles.base.css
@@ -1308,6 +1308,7 @@ a.active:focus {
 .region-sidebar-second .menu.sf-menu li a {
   border: none;
   border-bottom: 1px solid #68000e;
+  color: #fff;
 }
 #tertiary-content-wrapper .block {
   padding-top: 15px;
